fix tests and add support of async stylesheets loading

--- a/packages/dom-capture/tests/fixtures/longCss.html
+++ b/packages/dom-capture/tests/fixtures/longCss.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="http://localhost:7272/test.css">
+<link rel="prefetch" as="style" href="http://localhost:7272/test.css">
 <div class="blue">hi there</div>
