example change changelogs

--- a/scripts/changelogs-template.html
+++ b/scripts/changelogs-template.html
@@ -172,7 +172,7 @@
                 <li class="title"><span class="icon-trophy" style="color:yellow"></span> <b>Plan 2</b></li>
                 <li><b>Warranty:</b> 30 Days Money Back</li>
             </div>
-            <li><a class="pricebutton" href="http://ergonomictrends.com/best-ergonomic-office-chairs-2017-reviews-buyers-guide/" target="_blank" rel="nofollow"><span class="icon-tag"></span> Check Out</a></li>
+            <li><a class="pricebutton" href="http://ergonomictrends.com/best-ergonomic-office-chairs-2017-reviews-buyers-guide/" target="_blank" rel="nofollow">Check Out</a></li>
         </ul> 
     -->
 </div>
