html change changelogs

--- a/scripts/changelogs-template.html
+++ b/scripts/changelogs-template.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <title>CHLG</title>
     <style>
         .pricingdiv{
@@ -162,18 +164,18 @@
             }
     </script>
 </head>
-
 <body onload="buildChangelogs()">
-<div class="pricingdiv" id="container">
-	<!-- 
-        EXAMPLE
-        <ul class="theplan">
-            <div class="changelog">
-                <li class="title"><span class="icon-trophy" style="color:yellow"></span> <b>Plan 2</b></li>
-                <li><b>Warranty:</b> 30 Days Money Back</li>
-            </div>
-            <li><a class="pricebutton" href="http://ergonomictrends.com/best-ergonomic-office-chairs-2017-reviews-buyers-guide/" target="_blank" rel="nofollow">Check Out</a></li>
-        </ul> 
-    -->
-</div>
-</body></html>
+    <div class="pricingdiv" id="container">
+        <!-- 
+            EXAMPLE
+            <ul class="theplan">
+                <div class="changelog">
+                    <li class="title"><span class="icon-trophy" style="color:yellow"></span> <b>Plan 2</b></li>
+                    <li><b>Warranty:</b> 30 Days Money Back</li>
+                </div>
+                <li><a class="pricebutton" href="http://ergonomictrends.com/best-ergonomic-office-chairs-2017-reviews-buyers-guide/" target="_blank" rel="nofollow">Check Out</a></li>
+            </ul> 
+        -->
+    </div>
+</body>
+</html>
