ds: fix redirected frames

--- a/packages/dom-snapshot/test/fixtures/redirected-frame/page-with-redirected-frame.html
+++ b/packages/dom-snapshot/test/fixtures/redirected-frame/page-with-redirected-frame.html
@@ -2,6 +2,6 @@
 <iframe src="blank.html"></iframe>
 <script>
   const frame = document.querySelector('iframe')
-  frame.contentDocument.location.href = 'frame/frame.html'
+  frame.contentDocument.location.href = 'frame/inner-page.html'
 </script>
 <div>page</div>
