feat: working on cross iframes support

--- a/packages/eyes-sdk-core/test/fixtures/frames/another_frame.html
+++ b/packages/eyes-sdk-core/test/fixtures/frames/another_frame.html
@@ -5,7 +5,7 @@
 
 <body>
     <h1>Hi I am a another nested frame</h1>
-    <iframe src="http://localhost:7374/iframes/frame.html" style="display: flex; width: 100%; height: 100%; flex-direction: column;"></iframe>
+    <img src="https://cdn.imgbin.com/6/22/0/imgbin-ninja-google-analytics-logo-search-engine-optimization-ninja-ztckNUaL0534ab4wQQA9Rq8T7.jpg" />
 </body>
 
 </html>
